# wowmodelviewer

./: .gitignore  .gitmodules  .hgignore  Build.bat  CMakeLists.txt  CleanAndBuild.bat  ConfigAndBuild.bat  Configure.bat  DelBuildAndClearBinDirs.bat  Fetch Latest Listfile.bat  Fetch Latest encryptionkeys.bat  appveyor.yml  latest.txt  readme.md  updateManager.qrc  wmv.qrc
Source/ListFileGenerator/: CMakeLists.txt  main.cpp
Source/UpdateManager/: CMakeLists.txt  UpdateManager.cpp  UpdateManager.h  UpdateManager.manifest  main.cpp
Source/games/wow/: AnimManager.cpp  AnimManager.h  Attachment.cpp  Attachment.h  Bone.cpp  Bone.h  CASCChunks.h  CASCFile.cpp  CASCFile.h  CASCFolder.cpp  CASCFolder.h  CMakeLists.txt  CharDetails.cpp  CharDetails.h  CharDetailsEvent.h  CharTexture.cpp  CharTexture.h  FileTreeItem.h  HardDriveFile.cpp  HardDriveFile.h  ModelAttachment.cpp  ModelAttachment.h  ModelCamera.cpp  ModelCamera.h  ModelColor.cpp  ModelColor.h  ModelEvent.cpp  ModelEvent.h  ModelLight.cpp  ModelLight.h  ModelManager.cpp  ModelManager.h  ModelRenderPass.cpp  ModelRenderPass.h  ModelTransparency.cpp  ModelTransparency.h  RaceInfos.cpp  (+58 more)
Source/wowmodelviewer/: AVIGenerator.cpp  AVIGenerator.h  AnimExporter.cpp  AnimExporter.h  AnimationExportChoiceDialog.cpp  AnimationExportChoiceDialog.h  CMakeLists.txt  CharDetailsCustomizationChoice.cpp  CharDetailsCustomizationChoice.h  CharDetailsFrame.cpp  CharDetailsFrame.h  DisplaySettings.cpp  DisplaySettings.h  ExportSettings.cpp  ExportSettings.h  GeneralSettings.cpp  GeneralSettings.h  ItemImporterDialog.cpp  ItemImporterDialog.h  LogStackWalker.cpp  LogStackWalker.h  NPCImporterDialog.cpp  NPCImporterDialog.h  OrbitCamera.cpp  OrbitCamera.h  Quantize.cpp  Quantize.h  SettingsControl.cpp  SettingsControl.h  UserSkins.cpp  UserSkins.h  animcontrol.cpp  animcontrol.h  app.cpp  app.h  charcontrol.cpp  charcontrol.h  effects.cpp  effects.h  enums.h  (+29 more)
src/: AVIGenerator.cpp  AVIGenerator.h  AnimExporter.cpp  AnimExporter.h  AnimManager.cpp  AnimManager.h  ArmoryImporter.cpp  ArmoryImporter.h  Attachment.cpp  Attachment.h  Bone.cpp  Bone.h  CASCFile.cpp  CASCFile.h  CASCFolder.cpp  CASCFolder.h  CMakeLists.txt  CharDetails.cpp  CharDetails.h  CharDetailsEvent.h  CharDetailsFrame.cpp  CharDetailsFrame.h  CharInfos.h  CharTexture.cpp  CharTexture.h  DisplaySettings.cpp  DisplaySettings.h  ExportSettings.cpp  ExportSettings.h  FileTreeItem.h  GameDatabase.cpp  GameDatabase.h  GameFile.h  GeneralSettings.cpp  GeneralSettings.h  GlobalSettings.cpp  GlobalSettings.h  ItemImporterDialog.cpp  ItemImporterDialog.h  ItemInfos.h  (+136 more)
src/CxImage/: CMakeLists.txt  ximacfg.h  ximadef.h  ximadsp.cpp  ximaenc.cpp  ximaexif.cpp  ximage.h  ximainfo.cpp  ximatga.cpp  ximawnd.cpp  xiofile.h
src/Forms/: dialog_Settings.ui  dockWidget_Animation.ui  dockWidget_CharacterDesigner.ui  dockWidget_Equipment.ui  dockWidget_FileList.ui  dockWidget_Lighting.ui  dockWidget_ModelBank.ui  dockWidget_ModelControls.ui  wmvMainWindow.ui
src/ListFileGenerator/: CMakeLists.txt  main.cpp
src/NSIS/: NSIS.chm
src/Translations/: compile.bat  update.bat  updatemanager_en_US.qm  updatemanager_en_US.ts  wowmodelviewer_de_DE.qm  wowmodelviewer_de_DE.ts  wowmodelviewer_en_US.qm  wowmodelviewer_en_US.ts  wowmodelviewer_fr_FR.qm  wowmodelviewer_fr_FR.ts  wowmodelviewer_zh_CN.qm  wowmodelviewer_zh_CN.ts  wowmodelviewer_zh_TW.qm  wowmodelviewer_zh_TW.ts
src/UpdateManager/: CMakeLists.txt  UpdateManager.cpp  UpdateManager.h  main.cpp
src/bzip2/: bzip2.sln  bzip2.vcproj
src/casclib/: CMakeLists.txt
src/cmake/: FindGLEW.cmake  common.cmake  linux.cmake  macos.cmake  policies.cmake  sources.cmake  windows.cmake
src/core/: CMakeLists.txt  CSVFile.cpp  CSVFile.h  CharInfos.cpp  CharInfos.h  ExporterPlugin.cpp  ExporterPlugin.h  FileDownloader.cpp  FileDownloader.h  Game.cpp  Game.h  GameDatabase.cpp  GameDatabase.h  GameFile.cpp  GameFile.h  GameFolder.cpp  GameFolder.h  GlobalSettings.cpp  GlobalSettings.h  ImporterPlugin.h  MemoryUtils.cpp  MemoryUtils.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NPCInfos.cpp  NPCInfos.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h  ShaderProgram.cpp  ShaderProgram.h  VersionManager.cpp  VersionManager.h  dbfile.cpp  dbfile.h  wowmodelviewer.json
src/fbxfilesdk/: fbxfilesdk_def.h  fbxfilesdk_memory.h  fbxfilesdk_new.h
src/glew/: glew.cmake
src/libmpq/: Makefile  common.cpp  common.h  explode.cpp  explode.h  extract.cpp  huffman.cpp  libmpq.vcproj  mpq.cpp  mpq.h  wave.cpp
src/log/: CMakeLists.txt  LogOutput.h  LogOutputFile.cpp  LogOutputFile.h  Logger.cpp  Logger.h
src/next-gen/: CMakeLists.txt  GlobalSettings.cpp
src/plugins/: CMakeLists.txt
src/po/: deDE.po  enUS.po  frFR.po  zhTW.po
src/stormlib/: CMakeLists.txt  Info.plist  Makefile.linux  Publish.bat  Publish_beta.bat  StormLib.bat  StormLib_VC100.sln  StormLib_VC100.vcxproj  StormLib_VC100.vcxproj.filters  StormLib_VC90.sln  StormLib_VC90.vcproj  StormLib_dll.sln  StormLib_dll.vcproj  StormLib_test.sln  StormLib_test.vcproj  Storm_dll.bat  Storm_dll.sln  Storm_dll.vcproj  makefile.mac  makefile.w32
src/wowmodelviewer/: AVIGenerator.cpp  AVIGenerator.h  AnimExporter.cpp  AnimExporter.h  AnimationExportChoiceDialog.cpp  AnimationExportChoiceDialog.h  ArcBallCamera.cpp  ArcBallCamera.h  ArcBallCameraControl.cpp  ArcBallCameraControl.h  CMakeLists.txt  CharDetailsCustomizationChoice.cpp  CharDetailsCustomizationChoice.h  CharDetailsCustomizationSpin.cpp  CharDetailsCustomizationSpin.h  CharDetailsFrame.cpp  CharDetailsFrame.h  CustomDirectorySettings.cpp  CustomDirectorySettings.h  DisplaySettings.cpp  DisplaySettings.h  ExportSettings.cpp  ExportSettings.h  GeneralSettings.cpp  GeneralSettings.h  ItemImporterDialog.cpp  ItemImporterDialog.h  LogStackWalker.cpp  LogStackWalker.h  NPCImporterDialog.cpp  NPCImporterDialog.h  OrbitCamera.cpp  Quantize.cpp  Quantize.h  SettingsControl.cpp  SettingsControl.h  UserSkins.cpp  UserSkins.h  WoWModelViewer.cpp  WoWModelViewer.h  (+50 more)
src/wx/: json_defs.h  jsonreader.h  jsonval.h  jsonwriter.h
src/zlib/: t.eq  zlib.sln  zlib.vcproj
(+940 files in other folders)
